--- a/package.json
+++ b/package.json
@@ -2,12 +2,8 @@
   "name": "PrizeWheel",
   "version": "0.1.0",
   "description": "A customisable prize wheel",
-  "contributers": [
-    {
-      "name": "Rasmus Ljungmann Pedersen",
-      "email": "rasmuslp@gmail.com"
-    }
-  ],
+  "author": "Rasmus Ljungmann Pedersen <rasmuslp@gmail.com>",
+  "license": "MIT",
   "private": true,
   "repository": {
     "type": "git",
@@ -18,7 +14,8 @@
   },
   "homepage": "https://github.com/rasmuslp/PrizeWheel",
   "devDependencies": {
-    "browser-sync": "^2.6.4",
-    "gulp": "^3.8.11"
+    "browser-sync": "^2.8.2",
+    "gulp": "^3.9.0",
+    "gulp-gh-pages": "^0.5.2"
   }
 }
